# cpp-tasks

./: CMakeLists.txt  bigint.cpp  graph.cpp  smart_ptr.cpp
chat/: CMakeLists.txt
chat/res/: chat_window.qml  main.qrc
chat/src/: Chat.cpp  Chat.h  main.cpp
examples/: CMakeLists.txt  poker.cpp
include/: CMakeLists.txt  bigint.h  graph.h  smart_ptr.h
include/poker/: card.h  deck.h  game.h  hand.h  human.h  player.h  rules.h
src/: CMakeLists.txt  bigint.cpp
src/poker/: card.cpp  deck.cpp  hand.cpp  human.cpp  player.cpp  rules.cpp
test/: CMakeLists.txt  bigint.cpp  graph.cpp  smart_ptr.cpp
